--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="">
-    <meta name="google-site-verification" content="ejnv82cn_fFVKs3YOfNUdyHvFkoIUaho1-3Ev9436As" />
+    <meta name="google-site-verification" content="CQNPEJBKLNAJvTMPEp3pw_T8m4wNb9wgCiL6GM9CLr0" />
     <link rel="amphtml" href="https://slot-5000.site/bxt/superslot/">
-    <link rel="canonical" href="https://superslot.maskoolin.com/">
+    <link rel="canonical" href="https://superslot.mouplands.org/">
     <link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin>
     <link rel="icon" type="image/png" href="https://i.imgur.com/BcPoHfb.png">
     <title>Superslot : Situs Slot Gacor RTP Maxwin Hari Ini No#1 Indonesia</title>
     <meta name="description" content="Superslot merupakan link daftar dan login alternatif resmi situs super slot gampang menang dengan winrate dan rtp live tertinggi.">
     <meta property="og:site_name" content="superslot">
-    <meta property="og:url" content="https://superslot.maskoolin.com/">
+    <meta property="og:url" content="https://superslot.mouplands.org/">
     <meta property="og:title" content="Superslot : Situs Slot Gacor RTP Maxwin Hari Ini No#1 Indonesia">
     <meta property="og:type" content="product">
     <meta name="language" content="ID">
@@ -1805,7 +1805,7 @@ Item added to your cart
           type="text"
           class="field__input"
           id="ShareUrl-template--16345839042760__main"
-          value="https://superslot.maskoolin.com/"
+          value="https://superslot.mouplands.org/"
           placeholder="Link"
           onclick="this.select();"
           readonly
@@ -1945,7 +1945,7 @@ Item added to your cart
       "@context": "http://schema.org/",
       "@type": "Product",
       "name": "Superslot : Situs Slot Gacor RTP Maxwin Hari Ini No#1 Indonesia",
-      "url": "https://superslot.maskoolin.com/",
+      "url": "https://superslot.mouplands.org/",
       "image": [
           "https:\/\/idnslot-resmi.eagleeyes.com\/cdn\/shop\/files\/idnslot.png?v=1702402918\u0026width=1920"
         ],
@@ -2138,7 +2138,7 @@ Item added to your cart
     </ul>
 
     <script>
-      window.shopUrl = 'https://superslot.maskoolin.com/';
+      window.shopUrl = 'https://superslot.mouplands.org/';
       window.routes = {
         cart_add_url: '/cart/add',
         cart_change_url: '/cart/change',
